--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mdjemaa <mdjemaa@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/17 10:47:24 by rficht            #+#    #+#              #
-#    Updated: 2023/08/02 16:50:44 by mdjemaa          ###   ########.fr        #
+#    Updated: 2023/08/03 14:51:20 by mdjemaa          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -54,6 +54,7 @@ FILES =	ft_2lst_utils.c\
 		ft_2lst_utils2.c\
 		ft_abs.c\
 		ft_atoi.c\
+		ft_atouc.c\
 		ft_bzero.c\
 		ft_calloc.c\
 		ft_freenull.c\
@@ -123,6 +124,7 @@ FILES =	ft_2lst_utils.c\
 		ft_strnstr.c\
 		ft_strrchr.c\
 		ft_strresize.c\
+		ft_strshortenby.c\
 		ft_strtrim.c\
 		ft_strtrunc.c\
 		ft_substr.c\
