--- a/libgraph/Makefile
+++ b/libgraph/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mdjemaa <mdjemaa@student.42.fr>            +#+  +:+       +#+         #
+#    By: rficht <robin.ficht@free.fr>               +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/17 10:47:24 by rficht            #+#    #+#              #
-#    Updated: 2023/08/07 19:27:33 by mdjemaa          ###   ########.fr        #
+#    Updated: 2023/08/08 14:23:40 by rficht           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -41,7 +41,7 @@ INCLUDES = -I ../MLX42/include -I ../includes
 FLAGS = -Wall -Wextra -Werror
 
 # General compilation flags
-CFLAG = $(FLAGS) $(INCLUDES) #-fsanitize=address
+CFLAG = $(FLAGS) $(INCLUDES) -fsanitize=address
  
 # Linking compilation flags
 GFLAG = -g3
